// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductDetailsCard component renders correctly with optional prop 1`] = `
<div>
  <div
    class="ProductDetailsCard-root-1"
  >
    <img
      alt="Lorem ipsum"
      class="ProductDetailsCard-headerPicture-3 Media-root-8 Media-contain-9"
      src="path-to-image"
    />
    <div
      class="ProductDetailsCard-body-7"
    >
      <svg
        class="ProductDetailsCard-brandLogo-2"
        preserveAspectRatio="xMinYMin"
      />
      <h5
        class="MuiTypography-root ProductDetailsCard-title-4 Typography-root-10 MuiTypography-h5"
        data-testid="typography"
      >
        Sed ut perspiciatis
      </h5>
      <p
        class="MuiTypography-root Typography-root-10 MuiTypography-body1"
        data-testid="typography"
      >
        productDetailsCard.externalRefLabel
        :
         
        <span
          class="ProductDetailsCard-boldNobb-5"
        >
          09174907099
        </span>
      </p>
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover ProductDetailsCard-link-6 AnchorLink-root-18 Anchorlink MuiTypography-colorPrimary"
        href="/"
      >
        <span>
          Sit voluptatem
        </span>
        <svg
          aria-hidden="true"
          class="AnchorLink-icon-22"
          data-testid="internal"
          focusable="false"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`ProductDetailsCard component renders correctly without optional prop 1`] = `
<div>
  <div
    class="ProductDetailsCard-root-47"
  >
    <img
      alt="Lorem ipsum"
      class="ProductDetailsCard-headerPicture-49 Media-root-54 Media-contain-55"
      src="path-to-image"
    />
    <div
      class="ProductDetailsCard-body-53"
    >
      <svg
        class="ProductDetailsCard-brandLogo-48"
        preserveAspectRatio="xMinYMin"
      />
      <h5
        class="MuiTypography-root ProductDetailsCard-title-50 Typography-root-56 MuiTypography-h5"
        data-testid="typography"
      >
        Sed ut perspiciatis
      </h5>
      <p
        class="MuiTypography-root Typography-root-56 MuiTypography-body1"
        data-testid="typography"
      >
        productDetailsCard.externalRefLabel
        :
         
        <span
          class="ProductDetailsCard-boldNobb-51"
        >
          09174907099
        </span>
      </p>
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover ProductDetailsCard-link-52 AnchorLink-root-64 Anchorlink MuiTypography-colorPrimary"
        type="button"
      >
        <span>
          Sit voluptatem
        </span>
        <svg
          aria-hidden="true"
          class="AnchorLink-icon-68"
          data-testid="internal"
          focusable="false"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`ProductDetailsCard component renders deprecated imageSource 1`] = `
<div>
  <div
    class="ProductDetailsCard-root-24"
  >
    <div
      class="ProductDetailsCard-body-30"
    >
      <svg
        class="ProductDetailsCard-brandLogo-25"
        preserveAspectRatio="xMinYMin"
      />
      <h5
        class="MuiTypography-root ProductDetailsCard-title-27 Typography-root-33 MuiTypography-h5"
        data-testid="typography"
      >
        Sed ut perspiciatis
      </h5>
      <p
        class="MuiTypography-root Typography-root-33 MuiTypography-body1"
        data-testid="typography"
      >
        productDetailsCard.externalRefLabel
        :
         
        <span
          class="ProductDetailsCard-boldNobb-28"
        >
          09174907099
        </span>
      </p>
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover ProductDetailsCard-link-29 AnchorLink-root-41 Anchorlink MuiTypography-colorPrimary"
        href="/"
      >
        <span>
          Sit voluptatem
        </span>
        <svg
          aria-hidden="true"
          class="AnchorLink-icon-45"
          data-testid="internal"
          focusable="false"
        />
      </a>
    </div>
  </div>
</div>
`;
